--- a/html_formos/registracija.html
+++ b/html_formos/registracija.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <!-- head definitions go here -->
     </head>
     <body>        
-        <form action="prisijungimas.html">
+        <form action="patvirtinimas.html">
 
-              <h1>Register</h1>
-              <p>Please fill in this form to create an account.</p>              
+              <h1>Registracija</h1>
+              <p>Norėdami susikurti paskyrą užpildykite laukus</p>              
           
               <table>
                 <tr>
-                    <td><label for="Name"><b>Name</b></label></td>
-                    <td><input type="text" placeholder="Enter your name" name="email" id="email" required></td>
+                    <td><label for="Name"><b>Vardas</b></label></td>
+                    <td><input type="text" placeholder="Įrašykite savo vardą" name="email" id="email" required></td>
                 </tr>
                 <tr>
-                    <td><label for="Name"><b>Surname</b></label></td>
-                    <td><input type="text" placeholder="Enter your surname" name="email" id="email" required></td>
+                    <td><label for="Name"><b>Pavardė</b></label></td>
+                    <td><input type="text" placeholder="Įrašykite savo pavardę" name="email" id="email" required></td>
                 </tr>
                 <tr>
-                    <td><label for="email"><b>Email</b></label></td>
-                    <td><input type="text" placeholder="Enter Email" name="email" id="email" required></td>
+                    <td><label for="email"><b>El. pašto adresas</b></label></td>
+                    <td><input type="text" placeholder="Įrašykite el. pašto adresą" name="email" id="email" required></td>
                 </tr>
                 <tr>
-                    <td><label for="psw"><b>Password</b></label></td>
-                    <td><input type="password" placeholder="Enter Password" name="psw" id="psw" required></td>
+                    <td><label for="psw"><b>Slaptažodis</b></label></td>
+                    <td><input type="password" placeholder="Įrašykite slaptažodį" name="psw" id="psw" required></td>
                 </tr>
                 <tr>
-                    <td><label for="psw-repeat"><b>Repeat Password</b></label></td>
-                    <td><input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required></td>
+                    <td><label for="psw-repeat"><b>Slaptažodis</b></label></td>
+                    <td><input type="password" placeholder="Pakartokite slaptažodį" name="psw-repeat" id="psw-repeat" required></td>
                 </tr>
             </table>
 
-              <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-              <button type="submit" class="registerbtn">Register</button>
+              <p>Spausdami registruotis jūs sutinkate su mūsų <a href="#">Privatumo politika</a>.</p>
+              <button type="submit" class="registerbtn">Registruotis</button>
 
           
             <div class="container signin">
-              <p>Already have an account? <a href="prisijungimas.html">Sign in</a>.</p>
+              <p>Jau turite paskyrą? <a href="prisijungimas.html">Prisijunkite</a>.</p>
             </div>
           </form>
 
@@ -45,7 +46,7 @@
 
           </p>
           <form action="index.html">
-            <input type="submit" value="atgal" />
+            <input type="submit" value="Į pradžią" />
         </form>
     </body>
 </html>
