Kristijonas part done

--- a/html_formos/index.html
+++ b/html_formos/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <!-- head definitions go here -->
     </head>
-    <body>        
+    <body>       
+        <h1 style="text-align: center;">Sveiki atvykę!</h1> 
         <form action="registracija.html">
             <input type="submit" value="Registruotis" />
         </form>
@@ -13,6 +14,7 @@
         </form>
 
         <hr>
+        meniu:
         <form action="profilis.html">
             <input type="submit" value="Naudotojo profilis" />
         </form>
@@ -22,7 +24,12 @@
         <form action="laiku-kalendorius.html">
             <input type="submit" value="Rezervuoti sporto salės laiką" />
         </form>
+        <hr>
 
+
+        <iframe width="100%" height="1000" src="https://www.youtube.com/embed/wnHW6o8WMas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <h1 style="text-align: center;">Sporto klubas roskosmos</h1> 
 
     </body>
 </html>
