--- a/html_formos/laiku-kalendorius.html
+++ b/html_formos/laiku-kalendorius.html
@@ -1,8 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <meta charset="UTF-8">
         <!-- head definitions go here -->
+
+        <script>
+$(document).ready(function(){
+            //  if (jQuery) {  
+            //    // jQuery is loaded  
+            //    alert("Yeah!");
+            //  } else {
+            //    // jQuery is not loaded
+            //    alert("Doesn't Work");
+            //  }
+
+             $( "div" ).click(function() {
+            // alert("No!");
+            window.location.replace("sales_reg_patvirtinimas.html");
+});
+          });
+
+          
+
+        </script>
+
         <style>
             body {
 	font-family: Tahoma;
@@ -157,10 +179,10 @@ caption {
   
     <tr class="days">
       <td class="day other-month">
-        <div class="date">07:30</div>
+        <div class="date" id="click1">07:30</div>
       </td>
       <td class="day other-month">
-        <div class="date">07:30</div>
+        <div class="date" id="click1">07:30</div>
         <div class="event">
           <div class="event-desc">
             Rezervuota
@@ -171,21 +193,21 @@ caption {
         </div>
       </td>
       <td class="day other-month">
-        <div class="date">07:30</div>
+        <div class="date" id="click1">07:30</div>
       </td>
       <td class="day other-month">
-        <div class="date">07:30</div>
+        <div class="date" id="click1">07:30</div>
       </td>
       <td class="day other-month">
-        <div class="date">07:30</div>        
+        <div class="date" id="click1">07:30</div>        
       </td>
   
   
       <td class="day">
-        <div class="date">07:30</div>
+        <div class="date" id="click1">07:30</div>
       </td>
       <td class="day">
-        <div class="date">nedirba</div>
+        <div class="date" id="click1">nedirba</div>
         <div class="event">
           <div class="event-desc">
             Rezervuota
@@ -208,19 +230,19 @@ caption {
     </tr>
     <tr>
       <td class="day">
-        <div class="date">09:00</div>
+        <div class="date" id="click1">09:00</div>
       </td>
       <td class="day">
-        <div class="date">09:00</div>
+        <div class="date" id="click1">09:00</div>
       </td>
       <td class="day">
-        <div class="date">09:00</div>
+        <div class="date" id="click1">09:00</div>
       </td>
       <td class="day">
-        <div class="date">09:00</div>
+        <div class="date" id="click1">09:00</div>
       </td>
       <td class="day">
-        <div class="date">09:00</div>
+        <div class="date" id="click1">09:00</div>
         <div class="event">
           <div class="event-desc">
             Group Project meetup
@@ -231,27 +253,27 @@ caption {
         </div>
       </td>
       <td class="day">
-        <div class="date">VIETŲ NĖRA</div>
+        <div class="date" id="click1">VIETŲ NĖRA</div>
       </td>
       <td class="day">
-        <div class="date">nedirba</div>
+        <div class="date" id="click1">nedirba</div>
       </td>
     </tr>
     <tr>
       <td class="day">
-        <div class="date">11:30</div>
+        <div class="date" id="click1">11:30</div>
       </td>
       <td class="day">
-        <div class="date">11:30</div>
+        <div class="date" id="click1">11:30</div>
       </td>
       <td class="day">
-        <div class="date">11:30</div>
+        <div class="date" id="click1">11:30</div>
       </td>
       <td class="day">
-        <div class="date">11:30</div>
+        <div class="date" id="click1">11:30</div>
       </td>
       <td class="day">
-        <div class="date">VIETŲ NĖRA</div>
+        <div class="date" id="click1">VIETŲ NĖRA</div>
         <div class="event">
           <div class="event-desc">
             Board Meeting
@@ -262,31 +284,31 @@ caption {
         </div>
       </td>
       <td class="day">
-        <div class="date">11:30</div>
+        <div class="date" id="click1">11:30</div>
       </td>
       <td class="day">
-        <div class="date">nedirba</div>
+        <div class="date" id="click1">nedirba</div>
       </td>
     </tr>
     <tr>
   
       <td class="day">
-        <div class="date">13.00</div>
+        <div class="date" id="click1">13.00</div>
       </td>
       <td class="day">
-        <div class="date">13.00</div>
+        <div class="date" id="click1">13.00</div>
       </td>
       <td class="day">
-        <div class="date">13.00</div>
+        <div class="date" id="click1">13.00</div>
       </td>
       <td class="day">
-        <div class="date">13.00</div>
+        <div class="date" id="click1">13.00</div>
       </td>
       <td class="day">
-        <div class="date">13.00</div>
+        <div class="date" id="click1">13.00</div>
       </td>
       <td class="day">
-        <div class="date">VIETŲ NĖRA</div>
+        <div class="date" id="click1">VIETŲ NĖRA</div>
         <div class="event">
           <div class="event-desc">
             Conference call
@@ -297,15 +319,15 @@ caption {
         </div>
       </td>
       <td class="day">
-        <div class="date">nedirba</div>
+        <div class="date" id="click1">nedirba</div>
       </td>
     </tr>
     <tr>
       <td class="day">
-        <div class="date">VIETŲ NĖRA</div>
+        <div class="date" id="click1">VIETŲ NĖRA</div>
       </td>
       <td class="day">
-        <div class="date">16.30</div>
+        <div class="date" id="click1">16.30</div>
         <div class="event">
           <div class="event-desc">
             Conference Call
@@ -316,44 +338,44 @@ caption {
         </div>
       </td>
       <td class="day">
-        <div class="date">16.30</div>
+        <div class="date" id="click1">16.30</div>
       </td>
       <td class="day">
-        <div class="date">16.30</div>
+        <div class="date" id="click1">16.30</div>
       </td>
       <td class="day">
-        <div class="date">16.30</div>
+        <div class="date" id="click1">16.30</div>
       </td>
       <td class="day">
-        <div class="date">16.30</div>
+        <div class="date" id="click1">16.30</div>
       </td>
       <td class="day">
-        <div class="date">nedirba</div>
+        <div class="date" id="click1">nedirba</div>
       </td>
     </tr>
     <tr>
   
       <td class="day">
-        <div class="date">19.00</div>
+        <div class="date" id="click1">19.00</div>
       </td>
       <td class="day other-month">
-        <div class="date">19.00</div>
+        <div class="date" id="click1">19.00</div>
         <!-- Next Month -->
       </td>
       <td class="day other-month">
-        <div class="date">19.00</div>
+        <div class="date" id="click1">19.00</div>
       </td>
       <td class="day other-month">
-        <div class="date">19.00</div>
+        <div class="date" id="click1">19.00</div>
       </td>
       <td class="day other-month">
-        <div class="date">19.00</div>
+        <div class="date" id="click1">19.00</div>
       </td>
       <td class="day other-month">
-        <div class="date">19.00</div>
+        <div class="date" id="click1">19.00</div>
       </td>
       <td class="day other-month">
-        <div class="date">nedirba</div>
+        <div class="date" id="click1">nedirba</div>
       </td>
   
   </table>
