--- a/html_formos/index.html
+++ b/html_formos/index.html
@@ -26,6 +26,22 @@
         </form>
         <hr>
 
+        <hr>
+        trenerio meniu:
+        <form action="trenerioprofilis.html">
+            <input type="submit" value="Trenerio profilis" />
+        </form>
+        <form action="programos.html">
+            <input type="submit" value="Programos" />
+        </form>
+        <form action="klientukalendorius.html">
+            <input type="submit" value="Klientu kalendorius" />
+        </form>
+        <form action="klientai.html">
+            <input type="submit" value="Klientai" />
+        </form>
+        <hr>
+
 
         <iframe width="100%" height="1000" src="https://www.youtube.com/embed/wnHW6o8WMas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
