--- a/html_formos/index.html
+++ b/html_formos/index.html
@@ -41,6 +41,11 @@
             <input type="submit" value="Klientai" />
         </form>
         <hr>
+		
+		Administratoriaus meniu:
+		<form action="admin/admin.html">
+            <input type="submit" value="Admin Meniu" />
+        </form>
 
 
         <iframe width="100%" height="1000" src="https://www.youtube.com/embed/wnHW6o8WMas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
