--- a/html_formos/admin/admin.html
+++ b/html_formos/admin/admin.html
@@ -28,6 +28,14 @@
 		
 		<form action="nuolaidu-sarasas.html">
             <input type="submit" value="Nuolaidos"/>
+        </form><br>
+		
+		<form action="sandelys.html">
+            <input type="submit" value="Prekių sandelys" />
+        </form><br>
+		
+		<form action="prideti.html">
+            <input type="submit" value="Pridėti prekę" />
         </form>
 	
 	</body>
