--- a/html_formos/index.html
+++ b/html_formos/index.html
@@ -24,6 +24,12 @@
         <form action="laiku-kalendorius.html">
             <input type="submit" value="Rezervuoti sporto salės laiką" />
         </form>
+		<form action="katalogas.html">
+            <input type="submit" value="Prekių katalogas" />
+        </form>
+		<form action="saskaitos.html">
+            <input type="submit" value="Sąskaitos" />
+        </form>
         <hr>
 
         <hr>
@@ -39,6 +45,12 @@
         </form>
         <form action="klientai.html">
             <input type="submit" value="Klientai" />
+        </form>
+		<form action="saskaitos.html">
+            <input type="submit" value="Sąskaitos" />
+        </form>
+		<form action="katalogas.html">
+            <input type="submit" value="Prekių katalogas" />
         </form>
         <hr>
 		
