Mano lab3 dalis

--- a/html_formos/admin/admin.html
+++ b/html_formos/admin/admin.html
@@ -36,6 +36,10 @@
 		
 		<form action="prideti.html">
             <input type="submit" value="Pridėti prekę" />
+        </form><br>
+		
+		<form action="inventoriauskatalogas.html">
+            <input type="submit" value="Inventoriaus katalogas" />
         </form>
 	
 	</body>
