--- a/html_formos/index.html
+++ b/html_formos/index.html
@@ -52,6 +52,9 @@
 		<form action="katalogas.html">
             <input type="submit" value="Prekių katalogas" />
         </form>
+		<form action="registruotigedima.html">
+            <input type="submit" value="Registruoti gedimą" />
+        </form><br>
         <hr>
 		
 		Administratoriaus meniu:
